--- a/Prac/TheDarkMaze/styles.css
+++ b/Prac/TheDarkMaze/styles.css
@@ -18,8 +18,6 @@ body {
 }
 
 #game-container {
-  height: 800px;
-  width: 800px;
   position: relative;
 }
 
@@ -35,11 +33,19 @@ body {
   flex-wrap: wrap;
   /* transform: scale(2); */
 }
+.camera {
+  background-image: radial-gradient(circle, rgba(0, 0, 0, 0) 40%, #000 60%);
+  height: 400px;
+  width: 400px;
+  border-radius: 50%;
+  position: absolute;
+}
 
 .player-spriteSheet {
   background: url(./MaleHero.png);
   height: 129px;
   width: 192px;
+  z-index: 50;
   position: absolute;
 }
 
@@ -48,7 +54,7 @@ body {
   height: 32px;
   width: 64px;
   overflow: hidden;
-  /* transform: scale(2); */
+  transform: scale(1.5);
 }
 
 .tile {
