styles and html for the main screen

--- a/7H3_D4RK_M4Z3/view/index.html
+++ b/7H3_D4RK_M4Z3/view/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>7H3 D4RK M4Z3</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="../public/styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="game-title">
+        <h1>7H3 D4RK M4Z3</h1>
+        <p>Dare You To Wander</p>
+      </div>
+      <div class="sprite">
+        <img
+          class="sheet pixelart"
+          src="../Assets/players/main_hero.png"
+          alt="adventurer spritesheet"
+        />
+      </div>
+      <div class="button-container">
+        <div class="btn signup">Sign Up</div>
+        <div class="btn login">Login</div>
+      </div>
+    </div>
+  </body>
 </html>
