changed the signup & login div to anchor tag

--- a/7H3_D4RK_M4Z3/view/index.html
+++ b/7H3_D4RK_M4Z3/view/index.html
@@ -20,8 +20,8 @@
         />
       </div>
       <div class="button-container">
-        <div class="btn signup">Sign Up</div>
-        <div class="btn login">Login</div>
+        <a href="./register.html" class="btn signup">Sign Up</a>
+        <a href="./register.html" class="btn login">Login</a>
       </div>
     </div>
   </body>
