--- a/7H3_D4RK_M4Z3/public/styles.css
+++ b/7H3_D4RK_M4Z3/public/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --sprite-size: 5;
+  --sprite-size: 2;
 }
 
 * {
@@ -52,11 +52,12 @@ body {
 }
 
 .sprite {
-  width: calc(64px * var(--sprite-size));
-  height: calc(32px * var(--sprite-size));
+  width: calc(192px * var(--sprite-size));
+  height: calc(96px * var(--sprite-size));
   overflow: hidden;
   position: relative;
   margin: 1rem;
+  background: radial-gradient(circle, rgb(221, 44, 44), #000 50%);
 }
 
 .pixelart {
@@ -65,11 +66,16 @@ body {
 
 .sprite .sheet {
   position: absolute;
-  width: calc(192px * var(--sprite-size));
-  height: calc(128px * var(--sprite-size));
+  width: calc(576px * var(--sprite-size));
+  height: calc(384 * var(--sprite-size));
   animation: movement steps(3) infinite 0.5s;
-  top: calc(-62px * var(--sprite-size));
+  top: calc(-192px * var(--sprite-size));
   left: 0;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
 }
 
 .btn {
@@ -79,6 +85,7 @@ body {
   margin-top: 1rem;
   cursor: pointer;
   transition: 0.2s ease;
+  text-decoration: none;
 }
 
 .btn.signup {
@@ -112,4 +119,90 @@ body {
   to {
     transform: translateX(-100%);
   }
+}
+
+/* Register Screen */
+.forms {
+  width: 400px;
+}
+
+.switch-container {
+  font-family: "TheEndFont";
+  font-size: 1.5rem;
+  display: flex;
+  align-items: center;
+}
+
+.switch {
+  flex: 1;
+  padding: 1rem;
+  cursor: pointer;
+  background: #777;
+  color: #000;
+}
+
+.login-switch.active {
+  background: #111;
+  color: #ff0000;
+}
+
+.signup-switch.active {
+  background: #111;
+  color: #ff0000;
+}
+
+.form-container {
+  background: #111;
+  height: 480px;
+  font-family: sans-serif;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 70%;
+  margin: auto;
+  height: 100%;
+}
+
+.wrapper {
+  margin-top: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+.wrapper input {
+  border: none;
+  background: #777;
+  color: #fff;
+  padding: 0.7rem;
+  font-size: 1rem;
+}
+
+.wrapper label {
+  padding: 0.5rem 0;
+  color: #d8d8d8;
+}
+
+.forget {
+  color: red;
+  font-size: 0.8rem;
+  text-align: left;
+  margin-top: 0.2rem;
+  text-decoration: none;
+}
+
+.form-btn {
+  padding: 0.7rem 1.5rem;
+  font-size: 1.5rem;
+  border: none;
+  background: #000;
+  color: red;
+  margin-top: 2rem;
+}
+
+.hide {
+  display: none;
 }
