added a styleSheet and maze div

--- a/7H3_D4RK_M4Z3/view/game.html
+++ b/7H3_D4RK_M4Z3/view/game.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>7H3 D4RK M4Z3</title>
+    <link rel="stylesheet" href="../public/gameStyle.css">
 </head>
 <body>
     <div id="canvas">
-        <img src="" alt="hero" class="hero">
+        <div class="maze"></div>
     </div>
 </body>
 <script type="module" src="../controller/main.js"></script>
