added sprite direction change

--- a/7H3_D4RK_M4Z3/public/gameStyle.css
+++ b/7H3_D4RK_M4Z3/public/gameStyle.css
@@ -37,3 +37,20 @@ body {
   overflow: hidden;
   position: absolute;
 }
+
+.sheet {
+  position: absolute;
+}
+
+.sheet[facing="down"] {
+  top: 0px;
+}
+.sheet[facing="left"] {
+  top: -32px;
+}
+.sheet[facing="right"] {
+  top: -64px;
+}
+.sheet[facing="up"] {
+  top: -96px;
+}
