--- a/7H3_D4RK_M4Z3/view/register.html
+++ b/7H3_D4RK_M4Z3/view/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="../public/styles.css">
+    <link rel="stylesheet" href="../public/register.css">
 </head>
 <body>
     <div class="container">
