--- a/7H3_D4RK_M4Z3/public/gameStyle.css
+++ b/7H3_D4RK_M4Z3/public/gameStyle.css
@@ -33,27 +33,37 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  display: flex;
-  flex-wrap: wrap;
   width: 800px;
   height: 800px;
   z-index: 1;
+}
+
+.tile {
+  width: 80px;
+  height: 80px;
+  position: absolute;
 }
 
 .maze-layer-two {
   position: absolute;
   top: 0;
   left: 0;
-  display: flex;
-  flex-wrap: wrap;
   width: 800px;
   height: 800px;
   z-index: 2;
 }
 
-.tile {
-  width: 80px;
+.wall {
+  position: absolute;
+}
+
+.wall.vertical {
+  width: 35px;
   height: 80px;
+}
+.wall.horizontal {
+  width: 80px;
+  height: 35px;
 }
 
 .pixelart {
