--- a/7H3_D4RK_M4Z3/public/gameStyle.css
+++ b/7H3_D4RK_M4Z3/public/gameStyle.css
@@ -29,6 +29,14 @@ body {
   height: 800px;
 }
 
+.grad {
+  position: absolute;
+  background-image: radial-gradient(circle, rgba(0, 0, 0, 0) 30%, #000 60%);
+  z-index: 100;
+  height: 350px;
+  width: 350px;
+}
+
 .maze-layer-one {
   position: absolute;
   top: 0;
