--- a/7H3_D4RK_M4Z3/public/gameStyle.css
+++ b/7H3_D4RK_M4Z3/public/gameStyle.css
@@ -80,7 +80,19 @@ body {
   top: 0;
   left: 80px;
   position: absolute;
+  font-family: "TheEndFont";
+  color: #fff;
+  font-size: 0.8rem;
   z-index: 100;
+  margin: 0.5rem 0;
+}
+
+.username {
+  position: absolute;
+  font-size: 1.5rem;
+  top: -40px;
+  left: -55px;
+  color: #ff0000;
 }
 
 .hearts-container {
@@ -89,14 +101,11 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  transform: scale(3);
+  transform: scale(2);
 }
 
 .hearts-container::before {
-  content: "HEALTH : ";
-  color: #fff;
-  font-family: "TheEndFont";
-  font-size: 0.5rem;
+  content: "Health : ";
 }
 
 .heart {
@@ -120,15 +129,12 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  transform: scale(3);
+  transform: scale(2);
   margin-top: 1.5rem;
 }
 
 .bullet-container::before {
-  content: "BULLET : ";
-  color: #fff;
-  font-family: "TheEndFont";
-  font-size: 0.5rem;
+  content: "Bullet : ";
 }
 
 .bullet-container .bullet {
