--- a/register.css
+++ b/register.css
@@ -44,11 +44,18 @@
 }
 
 .floating {
-  margin-bottom: 1rem;
+  margin-bottom: 3rem;
   transition: background-color 0.2s ease;
   text-align: left;
   border-radius: 15px;
+}
 
+
+.floating-jr{
+  transition: background-color 0.2s ease;
+  text-align: left;
+  border-radius: 15px;
+  margin-top: 1.5rem;
 }
 
 .floating:hover,
@@ -76,8 +83,8 @@
   transition: 0.2s ease;
   text-decoration: none;
   width: 12rem;
-  background: #111;
-  color: #ff0000;
+  background: #6b0000;
+  color:#ffffff;
   border-radius: 20px;
   border: none;
 }
