--- a/client/views/join.ejs
+++ b/client/views/join.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+//partials to be implemented
 <body>
     <div class="container-join">
         <div class="forms">
@@ -26,6 +27,7 @@
     </div>    
 </body>
 <script>
+    //error handling
     switch('<%= error %>'){
         case 'roomId':
             alert("roomId is Invalid")
