--- a/client/views/index.ejs
+++ b/client/views/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <%- include('./partials/head.ejs') %> <!--includes head file-->
+  <%- include('./partials/head.ejs') %> 
   <body>
     <div class="container">
       <div class="game-title">
