--- a/client/views/partials/head.ejs
+++ b/client/views/partials/head.ejs
@@ -1,12 +1,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--
-        Using the embedded javascript to display The Dark Maze (Head)
-    -->
-    <title>The Dark Maze | <%= title %> </title>  
+    <title>The Dark Maze | <%= title %> </title>
     <% styles.forEach(style => { %>
         <link rel="stylesheet" href='../public/styles/<%= style %>'  >
     <% }) %>
-    <script src="/socket.io/socket.io.js"></script> <!--socket.io script for dynamic(realtime) webpage-->
+    <script src="/socket.io/socket.io.js"></script>
 </head>
