--- a/client/views/game.ejs
+++ b/client/views/game.ejs
@@ -5,6 +5,7 @@
         <div id="canvas">
             <div class="maze"></div>
         </div>
+    <audio class="bg-sound" src="../Assets/Sounds/Dark_Ambient.mp3"></audio>
     </body>
 <script type="module" src="../controller/main.js"></script>
 </html>
